--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>db-pool</module>
         <module>redis-pool</module>
         <module>hbase-pool</module>
+        <module>http-connection-pool</module>
     </modules>
     <name>common-pool-toolkit</name>
 
@@ -26,10 +27,20 @@
         <mysql-connector-java.version>5.1.43</mysql-connector-java.version>
         <hbase.version>1.2.6</hbase.version>
         <log4j.version>1.2.17</log4j.version>
+        <okhttp.version>3.12.1</okhttp.version>
+        <jedis.version>2.9.0</jedis.version>
+        <spring.version>5.0.6.RELEASE</spring.version>
+        <hikari.version>3.3.1</hikari.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>${okhttp.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.apache.hbase</groupId>
                 <artifactId>hbase-shaded-client</artifactId>
@@ -65,7 +76,7 @@
             <dependency>
                 <groupId>redis.clients</groupId>
                 <artifactId>jedis</artifactId>
-                <version>2.9.0</version>
+                <version>${jedis.version}</version>
             </dependency>
 
             <dependency>
@@ -89,26 +100,32 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
-                <version>5.0.6.RELEASE</version>
+                <version>${spring.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-jdbc</artifactId>
-                <version>5.0.6.RELEASE</version>
+                <version>${spring.version}</version>
             </dependency>
 
             <!-- db pool config -->
             <dependency>
                 <groupId>com.zaxxer</groupId>
                 <artifactId>HikariCP</artifactId>
-                <version>3.3.1</version>
+                <version>${hikari.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>3.8.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-collections4</artifactId>
+                <version>4.3</version>
             </dependency>
 
             <!-- log -->
