--- a/db-pool/pom.xml
+++ b/db-pool/pom.xml
@@ -4,13 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>common-pool-toolkit</artifactId>
-        <groupId>com.nicklaus</groupId>
+        <groupId>com.github.nicklaus</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>db-pool</artifactId>
     <name>db-pool</name>
-
 
     <dependencies>
         <dependency>
