--- a/redis-pool/pom.xml
+++ b/redis-pool/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>common-pool-toolkit</artifactId>
-        <groupId>com.nicklaus</groupId>
+        <groupId>com.github.nicklaus</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
