--- a/db-pool/pom.xml
+++ b/db-pool/pom.xml
@@ -9,7 +9,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>db-pool</artifactId>
     <name>db-pool</name>
-
+    <packaging>jar</packaging>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
