--- a/redis-pool/pom.xml
+++ b/redis-pool/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <packaging>jar</packaging>
     <artifactId>redis-pool</artifactId>
 
     <name>redis-pool</name>
