--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
     </scm>
 
     <description>friendly common pools base on spring-boot</description>
+    <url>https://github.com/nicklaus4/common-pool-toolkit</url>
+
     <licenses>
         <license>
             <name>The Apache License, Version 2.0</name>
@@ -203,6 +205,41 @@
     <build>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>2.2.1</version>
+                    <executions>
+                        <execution>
+                            <id>attach-sources</id>
+                            <goals>
+                                <goal>jar-no-fork</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>2.10.3</version>
+                    <executions>
+                        <execution>
+                            <id>attach-javadocs</id>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <!-- 解决 java8 下发布到 maven 中心库时，生成 doc 的异常 -->
+                        <additionalparam>-Xdoclint:none</additionalparam>
+                        <encoding>${project.build.sourceEncoding}</encoding>
+                        <outputDirectory>${basedir}</outputDirectory>
+                        <reportOutputDirectory>${basedir}</reportOutputDirectory>
+                    </configuration>
+                </plugin>
+
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
