--- a/redis-pool/pom.xml
+++ b/redis-pool/pom.xml
@@ -9,8 +9,9 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
     <artifactId>redis-pool</artifactId>
-
     <name>redis-pool</name>
+
+    <description>redis pool</description>
     <dependencies>
         <dependency>
             <groupId>redis.clients</groupId>
@@ -86,6 +87,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
