--- a/db-pool/pom.xml
+++ b/db-pool/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>common-pool-toolkit</artifactId>
         <groupId>com.github.nicklaus4</groupId>
-        <version>1.0.3-SNAPSHOT</version>
+        <version>1.0.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>db-pool</artifactId>
