--- a/http-connection-pool/pom.xml
+++ b/http-connection-pool/pom.xml
@@ -12,6 +12,11 @@
     <description>http pool</description>
     <dependencies>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
         </dependency>
