--- a/hbase-pool/pom.xml
+++ b/hbase-pool/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>common-pool-toolkit</artifactId>
         <groupId>com.github.nicklaus4</groupId>
-        <version>1.0.5</version>
+        <version>1.0.6-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
