--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>com.github.nicklaus4</groupId>
     <artifactId>common-pool-toolkit</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.5</version>
+    <version>1.0.6-SNAPSHOT</version>
 
     <modules>
         <module>db-pool</module>
@@ -17,7 +17,7 @@
         <connection>scm:git:https://github.com/nicklaus4/common-pool-toolkit.git</connection>
         <developerConnection>scm:git:https://github.com/nicklaus4/common-pool-toolkit.git</developerConnection>
         <url>https://github.com/nicklaus4/common-pool-toolkit</url>
-        <tag>common-pool-toolkit-1.0.5</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <description>friendly common pools base on spring-boot</description>
