--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>redis-pool</module>
         <module>hbase-pool</module>
         <module>http-connection-pool</module>
+        <module>localcache-pool</module>
     </modules>
     <name>common-pool-toolkit</name>
 
@@ -56,6 +57,12 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.github.ben-manes.caffeine</groupId>
+                <artifactId>caffeine</artifactId>
+                <version>2.7.0</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
@@ -178,6 +185,13 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-collections4</artifactId>
                 <version>4.3</version>
+            </dependency>
+
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.12</version>
+                <scope>test</scope>
             </dependency>
 
             <!-- log -->
