--- a/pom.xml
+++ b/pom.xml
@@ -51,14 +51,22 @@
         <log4j.version>1.2.17</log4j.version>
         <okhttp.version>3.12.1</okhttp.version>
         <jedis.version>2.9.0</jedis.version>
-        <spring.version>5.0.6.RELEASE</spring.version>
+<!--        <spring.version>5.0.6.RELEASE</spring.version>-->
+        <spring.version>5.1.3.RELEASE</spring.version>
         <hikari.version>3.3.1</hikari.version>
-        <springboot.version>2.0.2.RELEASE</springboot.version>
+<!--        <springboot.version>2.0.2.RELEASE</springboot.version>-->
+        <springboot.version>2.1.3.RELEASE</springboot.version>
         <xmemcached.version>2.4.6</xmemcached.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>io.projectreactor.netty</groupId>
+                <artifactId>reactor-netty</artifactId>
+                <version>0.8.5.RELEASE</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.googlecode.xmemcached</groupId>
                 <artifactId>xmemcached</artifactId>
@@ -167,6 +175,12 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-webflux</artifactId>
                 <version>${spring.version}</version>
             </dependency>
 
